# git-note

./: .gitignore  CMakeLists.txt  Makefile  README.md  add.c  add.h  complete.c  complete.h  file_helpers.c  file_helpers.h  git_helpers.c  git_helpers.h  install.sh  main.c  note.c  note.h  show.c
src/: add.c  add.h  complete.c  file_helpers.c  file_helpers.h  git_helpers.c  git_helpers.h  main.c  note.c  note.h  show.c  show.h  storage.c  storage.h  string_helpers.h
src/display/: display_notes.c  display_notes.h
src/hashnote_table/: hashnote_table.c  hashnote_table.h
